add sections and basic styling

--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
 *, *::before, *::after {
     box-sizing: border-box;
 }
+
+:root {
+    --ff-sans: 'Source Sans Pro', sans-serif;
+    --ff-code: 'Source Code Pro', monospace;
+
+    --fw-reg: 300;
+    --fw-bold: 900;
+
+    --clr-light: #fff;
+    --clr-dark: #3030308;
+    --clr-accent: #16e0bd;
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+}
+
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
+body {
+    background: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-sans);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+/* fonts */
+
+strong {
+    font-weight: var(--fw-bold);
+}
+
+h1, h2, h3 {
+    line-height: 1.1;
+    margin: 0;
+}
+
+h1 {
+    font-size: var(--fs-h1);
+}
+
+h2 {
+    font-size: var(--fs-h2);
+}
+
+h2 {
+    font-size: var(--fs-h2);
+}
+
+/* titles */
+
+.section-title {
+    margin-bottom: .25rem;
+    font-weight: var(--fw-reg);
+}
+
+.section-title strong {
+    display: block;
+}
+
+.section-subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section-subtitle_intro {
+    background: var(--clr-accent);
+    font-family: var(--ff-code);
+}
+
+/* intro section */
+
+.intro {
+    position: relative;
+}
