--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     --fs-body: 1rem;
 }
 
-@media (max-width: 800px) {
+@media (min-width: 800px) {
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
