--- a/style.css
+++ b/style.css
@@ -91,3 +91,34 @@ h2 {
 .intro {
     position: relative;
 }
+
+/* footer */
+
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer-link {
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-bold);
+}
+
+.social-item {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0;
+    padding: 0;
+}
+
+.footer-link:hover, .social-item:hover {
+    opacity: .7;
+}
