--- a/style.css
+++ b/style.css
@@ -94,14 +94,14 @@ h2 {
 
 /* footer */
 
-.footer {
+footer {
     background: #111;
     color: var(--clr-accent);
     text-align: center;
     padding: 2.5em 0;
 }
 
-.footer a {
+footer a {
     color: inherit;
     text-decoration: none;
 }
