--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ img {
     max-width: 100%;
 }
 
+section {
+    padding-top: 20;
+    padding-bottom: 20;
+}
+
 /* fonts */
 
 strong {
@@ -91,9 +96,6 @@ h3 {
 .intro {
     position: relative;
 }
-
-/* skills section */
-
 
 /* footer */
 
