--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ img {
 
 section {
     display: inline-block;
-    padding-top: 20;
-    padding-bottom: 20;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 /* fonts */
