update dark colour variable

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --fw-bold: 900;
 
     --clr-light: #fff;
-    --clr-dark: #3030308;
+    --clr-dark: #1a1313;
     --clr-accent: #16e0bd;
 
     --fs-h1: 3rem;
