update intro section colouring

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
     --clr-light: #fff;
     --clr-dark: #1a1313;
-    --clr-accent: #16e0bd;
+    --clr-accent: #289c6a;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
