--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ footer a {
     text-decoration: none;
 }
 
-.footer-link {
+.social-link {
     font-size: var(--fs-h3);
     font-weight: var(--fw-bold);
 }
@@ -155,6 +155,6 @@ footer a {
     font-size: var(--fs-h1);
 }
 
-.footer-link:hover, .social-item:hover {
+.social-link:hover, .social-item:hover {
     opacity: .7;
 }
