--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@
         --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
+
+    .navbar a {
+        font-size: 0.8rem;
+        padding: 8px 12px;
+    }
 }
 
 body {
@@ -111,7 +116,7 @@ h3 {
 }
 
 .navbar a:hover {
-    background-color: rgb(22, 21, 21);
+    background-color: var(--clr-dark);
 }
 
 .navbar a:active {
