--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 *, *::before, *::after {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 :root {
@@ -215,7 +217,7 @@ h3 {
 }
 
 .slide-content {
-    padding-top: 200px;
+    margin-top: 200px;
     z-index: 1;
     position: relative;
     color: var(--clr-light);
