--- a/style.css
+++ b/style.css
@@ -32,7 +32,11 @@ body {
 }
 
 .circle {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 200px;
+
     height: 200px;
     border-radius: 50%;
     overflow: hidden;
